# ticketing_system

./: .dockerignore  .env.TEMPLATE  .gitignore  Dockerfile  Justfile  LICENSE  README.md  alembic.ini  compose.yml  pgadmin.env  pgadmin.env.TEMPLATE  postgres.env  postgres.env.TEMPLATE  pyproject.toml  ruff.toml  technical_report.md
alembic/: env.py
alembic/versions/: 0001_initial_service_tickets.py  58d62f36c3d0_create_service_tickets_table.py  b4d94f2c7a1d_align_ticket_schema_for_async_llm.py  c8a7e7d8f1b2_add_manual_triage_fields.py  ef8b4f7b2c11_migrate_to_openai_only_triage_schema.py
data/: MOCK_DATA.json  init.sql
pgadmin/: generate-servers.sh  servers.json
scripts/: __init__.py  docker-entrypoint.sh  generate_mock_tickets.py  setup-env-files.sh
src/: dependencies.py  main.py
src/components/: __init__.py
src/core/: header_menu.py  logging.py  settings.py  theme.py
src/db/: __init__.py  base.py  migrations.py  seed.py  session.py  types.py
src/llm/: contracts.py  embeddings.py  ollama_client.py  openai_client.py  prompt.py  retrieval.py  triage.py
src/models/: __init__.py  embedding.py  kb_chunk.py  service_ticket_model.py  ticket.py
src/pages/: __init__.py  ai_page.py  ai_service_page.py  home_page.py  manual_page.py  manual_request_page.py  manual_service_page.py  metrics_page.py
src/repositories/: __init__.py  contracts.py  kb_chunk_repository.py  service_ticket_repository.py  ticket_embedding_repository.py  ticket_repository.py
src/schemas/: __init__.py  base.py  schema.py  service_ticket.py
tests/: conftest.py  test_ai_page.py  test_db_types.py  test_dependencies.py  test_generate_mock_tickets.py  test_home_page.py  test_manual_request_page.py  test_manual_triage_modal.py  test_manual_triage_schema.py  test_metrics_page.py  test_ollama_client.py  test_openai_client.py  test_prompt.py  test_repositories.py  test_service_ticket_service.py  test_ticket_create_schema.py  test_ticket_table.py
(+12 files in other folders)
