[project]
name = "ticketing-system"
version = "0.1.0"
description = "AI powered IT Ticket Triage System"
authors = [
    { name = "Nathan Anderson", email = "n0a64415@marymount.edu" },
    { name = "Adhwa Altheyab", email = "a0a97644@marymount.edu" },
    { name = "Farah Alregibah", email = "f0a97639@marymount.edu" },
]
license = "MIT"
license-files = ["LICENSE.md"]
keywords = ["web", "ai", "help desk", "IT", "ticketing"]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "loguru>=0.7.3",
    "nicegui>=3.8.0",
    "sqlalchemy>=2.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pywebview>=6.1",
    "alembic-postgresql-enum>=1.10.0",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.41.0",
    "openai>=2.26.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.5"]
